Fix some errors and make others visible

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,8 +12,8 @@
 	--nav-hover: #b4b3b0;
 	--nav-faded: #4d4c4c;
 	--nav-faded-hover: #6e6e6e;
-	--selection: rgba(103, 134, 221, 0.6);
-	--errors-background: #f13000c5;
+	--selection: #6786dd99;
+	--errors-background: #62190f;
 	--errors-text: #ffffffcc;
 }
 
@@ -31,8 +31,8 @@
 	--nav-hover: #565d64;
 	--nav-faded: #9fa2a7;
 	--nav-faded-hover: #bcbfc3;
-	--selection: rgba(103, 134, 221, 0.6);
-	--errors-background: #f13000c5;
+	--selection: #6786dd99;
+	--errors-background: #f66653;
 	--errors-text: #000000cc;
 }
 
@@ -51,8 +51,8 @@
 		--nav-hover: #565d64;
 		--nav-faded: #9fa2a7;
 		--nav-faded-hover: #bcbfc3;
-		--selection: rgba(103, 134, 221, 0.6);
-		--errors-background: #f13000c5;
+		--selection: #6786dd99;
+		--errors-background: #f66653;
 		--errors-text: #000000cc;
 	}
 }
@@ -434,42 +434,20 @@ main.has-preview {
 	fill: var(--accent-blue);
 }
 
-.errors {
-	position: fixed;
-	display: flex;
-	bottom: 17px;
-	right: 17px;
-	margin: 5px;
-	border-radius: 3px;
-	background-color: var(--errors-background);
-	color: var(--errors-text);
-	fill: var(--errors-text);
-}
-
 .error {
-	display: flex;
-	align-items: center;
-	padding: 7px;
+	padding: 5px 14px;
+	margin: 12px 16px;
+	color: var(--text-1);
+	background-color: var(--errors-background);
+	border-radius: 3px;
 }
 
-.error span:not(:last-child) {
-	padding-right: 11px;
+.error > * {
+	margin: 10px 0;
 }
 
-.errors .toggle {
-	padding: 6px;
-	width: 36px;
-	height: 36px;
-	cursor: pointer;
-	user-select: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-}
-
-.errors svg {
-	width: 24px;
-	height: 24px;
+.error a {
+	color: var(--text-1)
 }
 
 .home {
